# Simple_HTTP_serever_and_client

./: .make_format.sh  CMakeLists.txt  README.md  http_server.c
include/: methods.h  wrappers.h
src/: CMakeLists.txt  http_client.c  http_server.c  main_client.c  methods.c  utils.c  wrappers.c
src/refactor/: CMakeLists.txt  main.c  methods.c  methods.h  wrappers.c
src/refactor/include/: utils.h
src/refactor/src/: utils.c  wrappers.c
src/v1/: CMakeLists.txt  http_client.c  http_server.c
src/v2/: CMakeLists.txt  client.c  main_server.c  server.c
src/v2/include/: client.h  server.h
src/v2/src/: client.c  main_client.c  main_server.c  server.c
src/v3/: CMakeLists.txt  main_client.c  main_server.c
src/wrappers/: CMakeLists.txt  wrappers.c  wrappers.h
